--- a/resources/sass/admin/admin.scss
+++ b/resources/sass/admin/admin.scss
@@ -6,3 +6,28 @@
 
 // Your own, project specific styles
 @import "styles/index";
+
+#treeContainer {
+    display: block;
+    float: left;
+    clear: both;
+    width: 100%;
+    min-width: 100%;
+
+    #tree {
+        display: block;
+        float:left;
+        overflow:auto;
+        padding:10px;
+        border: 1px solid #7adddd;
+    }
+    #data {
+        display: block;
+        float: left;
+        clear: none;
+        form {
+            //float: left;
+            //clear: both;
+        }
+    }
+}
