--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -6,6 +6,13 @@
 @import 'mixins';
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
+
+//@import '~@fortawesome/fontawesome-free/css/all.css';
+@import '~@fortawesome/fontawesome-free/scss/fontawesome';
+@import '~@fortawesome/fontawesome-free/scss/regular';
+@import '~@fortawesome/fontawesome-free/scss/solid';
+@import '~@fortawesome/fontawesome-free/scss/brands';
+
 @import '~include-media/dist/_include-media';
 
 html, body {
