--- a/resources/sass/red.scss
+++ b/resources/sass/red.scss
@@ -619,3 +619,11 @@ pre {
     color: #ffff00;
     font-weight: bold;
 }
+button.btnPay {
+    font-size: 1.5rem;
+    i.payIcon {
+        &.fab, &.fas {
+            font-size: 2.0rem;
+        }
+    }
+}
