webhook stuff, order create, update after success hook

--- a/resources/sass/red.scss
+++ b/resources/sass/red.scss
@@ -110,20 +110,6 @@ html, body {
         }
     }
     .header {
-        /*
-                .pager {
-                    position: fixed;
-                    display: inline-block;
-                    top: 8px;
-                    right: 10px;
-                    width: auto;
-
-                    @include media("<tablet") {
-                        left: 10px;
-                    }
-                    border: 1px solid yellow;
-                }
-        */
     }
     .footer {
         .pager {
@@ -624,6 +610,18 @@ pre {
     i.payIcon {
         &.fab, &.fas {
             font-size: 2.0rem !important;
+        }
+    }
+}
+.product-list {
+    tr {
+        td {
+            vertical-align: middle;
+            img {
+                height: auto;
+                max-height: 80px;
+                border-radius: 40px;
+            }
         }
     }
 }
