--- a/resources/sass/red.scss
+++ b/resources/sass/red.scss
@@ -633,3 +633,24 @@ button {
         }
     }
 }
+.newLink {
+    color: $sRed !important;
+    font-weight: bold;
+    background-color: $sYellow;
+    border-radius: 5px;
+    padding-left: 20px !important;
+    padding-right: 20px !important;
+    margin-left: 10px !important;
+    &:hover {
+        color: red !important;
+    }
+}
+.alert-block {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: auto;
+    min-width: 300px;
+    padding: 20px;
+    z-index: 10000;
+}
