--- a/resources/sass/admin/admin.scss
+++ b/resources/sass/admin/admin.scss
@@ -3,7 +3,7 @@
 
 // Vendor
 @import "vendor/index";
-
+@import '~@fortawesome/fontawesome-free/css/all.css';
 // Your own, project specific styles
 @import "styles/index";
 
