--- a/resources/sass/red.scss
+++ b/resources/sass/red.scss
@@ -97,16 +97,24 @@ html, body {
         }
         .card-body {
             color: $sFontColor;
+            border-radius: 0 !important;
+            border: none !important;
             form {
                 a.btn-link {
                     color: $sYellow;
                 }
             }
             .table {
-                border-colorY: yellow;
+                tbody {
+                    margin: 0;
+                    padding: 0;
+                }
                 tr {
+                    margin: 0;
+                    padding: 0;
                     th,td {
                         color: $sFontColor;
+                        border: none;
                     }
                 }
                 &.product-list {
@@ -123,8 +131,6 @@ html, body {
                 }
             }
         }
-    }
-    .header {
     }
     .footer {
         .pager {
