--- a/resources/sass/red.scss
+++ b/resources/sass/red.scss
@@ -667,3 +667,6 @@ button {
 .no-scroll::-o-scrollbar {display:none;}
 .no-scroll::-google-ms-scrollbar {display:none;}
 .no-scroll::-khtml-scrollbar {display:none;}
+.nowrap {
+    white-space: nowrap !important;
+}
