--- a/resources/sass/admin/admin.scss
+++ b/resources/sass/admin/admin.scss
@@ -4,6 +4,7 @@
 // Vendor
 @import "vendor/index";
 @import '~@fortawesome/fontawesome-free/css/all.css';
+@import "~jstree/dist/themes/default/style.min.css";
 // Your own, project specific styles
 @import "styles/index";
 
